fix attachment buttons not showing for single attachments

--- a/css/mail.css
+++ b/css/mail.css
@@ -238,7 +238,6 @@ button.control {
 	margin-bottom: 20px;
 }
 .mail-message-attachment {
-	height: 38px;
 	white-space: nowrap;
 	overflow: hidden;
 	text-overflow: ellipsis;
